@@ -37,3 +37,4 @@ Andreu Corominas Murta (debugging non-thread-safe Bottle::write problem)
 Lorenz M\"osenlechner (swig bindings for Allegro Lisp)
 Frank F\"orster (noted misleading link in installation instructions)
 Arnaud Degroote (reported problem in port_power example)
+Danilo Tardioli (patch for locale problem)
